# High-Frequency-Volatility-Market-Maker-Dispersion-Arbitrage-Engine

./: README.md  requirements.txt
cpp_core/: CMakeLists.txt
cpp_core/bindings/: pybind_module.cpp
cpp_core/include/dispersion/: correlation_matrix.hpp  dirty_correlation.hpp  zscore_signal.hpp
cpp_core/include/execution/: confidence_quoter.hpp  position_sizer.hpp
cpp_core/include/hedging/: central_risk_book.hpp  leland.hpp  vega_neutralizer.hpp
cpp_core/include/market_making/: avellaneda_stoikov.hpp  lucic_tse.hpp
cpp_core/include/pricing/: black_scholes.hpp  implied_vol.hpp
cpp_core/src/pricing/: black_scholes.cpp  implied_vol.cpp
cpp_core/tests/: test_dispersion.cpp  test_execution.cpp  test_hedging.cpp  test_market_making.cpp  test_pricing.cpp
data/cache/: yfinance_data_2023-01-01_2026-07-21.parquet
data/ingestion/: __init__.py  data_loader.py  yfinance_loader.py
data/sanity_checks/: __init__.py  mental_math_logger.py
python_rl/: __init__.py  train.py
python_rl/agents/: __init__.py  ppo_agent.py  sig_reinforce.py
python_rl/env/: __init__.py  market_making_env.py
python_rl/ml_signals/: __init__.py  svm_regime_classifier.py  xgboost_vol_forecast.py
python_rl/order_flow/: __init__.py  hawkes_process.py
sim/: __init__.py  run_backtest.py
